<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:id="@+id/main_drawer_layout"
    android:fitsSystemWindows="true"
    tools:viewBindingIgnore="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.5dp"
            android:drawablePadding="5dp"
            android:orientation="vertical"
            android:text="@string/welcome"
            android:textColor="@color/black_color"
            android:textSize="19sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/c_main_welcomed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            android:layoutDirection="ltr"
            android:textDirection="ltr"/>


        <ImageView
            android:id="@+id/main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/main_menu"
            android:focusable="true"
            android:src="@drawable/c_main_menud"
            app:layout_constraintBottom_toBottomOf="@id/text1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text1"
            app:layout_constraintWidth_percent="0.65"
            android:layoutDirection="ltr"
            android:textDirection="ltr"/>


        <ImageView
            android:id="@+id/main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/search"
            android:focusable="true"
            android:src="@drawable/c_main_searchd"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@id/main_menu"
            app:layout_constraintBottom_toBottomOf="@id/text1"
            app:layout_constraintTop_toTopOf="@id/text1"
            app:layout_constraintWidth_percent="0.65"
            android:layoutDirection="ltr"
            android:textDirection="ltr"/>


        <LinearLayout
            android:id="@+id/customTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/main_menu"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintVertical_bias="0"
            android:layoutDirection="ltr"
            android:textDirection="ltr">

            <TextView
                android:id="@+id/tab_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_weight="1"
                android:background="@drawable/c_main_unselected_tabbg"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/my_account"
                android:textColor="@color/black_color"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_weight="1"
                android:background="@drawable/c_main_unselected_tabbg"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/favorite"
                android:textColor="@color/black_color"
                android:textSize="13sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tab_subscriptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_weight="1"
                android:background="@drawable/c_main_unselected_tabbg"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/subscriptions"
                android:textColor="@color/black_color"
                android:textSize="13sp"
                android:textStyle="bold" />




            <TextView
                android:id="@+id/tab_courses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/a_welcome_nextbg"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/courses"
                android:textColor="@color/white_color"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>




        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mainFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/customTabLayout"
            app:layout_constraintStart_toStartOf="@id/customTabLayout"
            app:layout_constraintTop_toBottomOf="@id/customTabLayout"
            android:layout_marginTop="11dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include layout="@layout/app_nav_drawer" />


</androidx.drawerlayout.widget.DrawerLayout>